--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">AndroidFundamentalsApril</string>
+    <string name="title">Login</string>
+    <string name="title_register">Register</string>
+    <string name="next">Next</string>
+    <string name="email">Email</string>
+    <string name="accept_terms_and_conditions">Accept Terms And Conditions</string>
+    <string name="notifications">Notifications</string>
 </resources>
