--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,8 @@
     <string name="title_activity_tab">TabActivity</string>
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
+
+    <string name="error_occured">Error Occurred</string>
+    <string name="retry">Retry</string>
+    <string name="retry_message">This is an error, please retry!!</string>
 </resources>
